Update look of BD problem

--- a/drafts/birthday-problem/index.html
+++ b/drafts/birthday-problem/index.html
@@ -3,8 +3,19 @@
 <head>
     <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css" />
     <style>
-        [ng-cloak] {
-            display: none;
+        body {
+            padding-top: 20px;
+        }
+        table {
+            width: 100%;
+        }
+        table th,td {
+            border: 1px solid lightgrey;
+            width: 50%;
+        }
+        .actors {
+            max-height: 80%;
+            overflow: scroll;
         }
     </style>
     <script src="node_modules/angular/angular.min.js"></script>
@@ -17,33 +28,60 @@
     <script type="text/ng-template" id="birthday-app.component.html">
         <div class="container">
             <div class="row">
-                <div class="col-sm-12">
-                    <select 
-                        ng-model="ba.selected"
-                        ng-options="option for option in ba.options"
-                        ng-change="ba.reSample()"
-                    ></select>
-                    <button class="btn btn-default" ng-click="ba.reSample()">Try Again</button>
+                <div class="col-sm-6">
+                    Sample Size :
+                    <span ng-repeat="option in ba.options">
+                        <label>
+                            <input 
+                                type="radio" 
+                                ng-model="ba.selected" 
+                                ng-value="option"
+                                ng-change="ba.reSample()"
+                            > 
+                            {{option}}
+                        </label>
+                    </span>
+                    <button class="btn btn-primary" ng-click="ba.reSample()">Try Again</button>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-6">
                     <div>
                         <div ng-if="ba.matches.length === 0">
                             <h3>No Matches Found</h3>
                         </div>
                         <div ng-if="ba.matches.length > 0">
                             <h3>Matches Found</h3>
-                            <ul>
-                                <li ng-repeat="match in ba.matches track by $index">
-                                    {{match.name}} - {{match.db}}
-                                </li>
-                            </ul> 
+                            <table>
+                                <tr>
+                                    <th>Name</th>
+                                    <th>Birthday</th>
+                                </tr>
+                                <tr ng-repeat="match in ba.matches track by $index">
+                                    <td>{{match.name}}</td>
+                                    <td>{{match.db}}</td>
+                                </tr>
+                            </table>
                         </div>
                     </div>
+                </div>
+                <div class="col-sm-6">
                     <div>
-                        <h3>Out of {{ ba.selected }} actors</h3>
-                        <ul ng-if="ba.birthdays.length > 0">
-                            <li ng-repeat="bd in ba.birthdays track by $index">
-                                {{ bd.name }}
-                            </li>
-                        </ul>
+                        <h3>{{ ba.selected }} Random Actors</h3>
+                        <div class="actors">
+                            <table ng-if="ba.birthdays.length > 0">
+                                <tr>
+                                    <th>ID</th>
+                                    <th>Name</th>
+                                    <th>Birthday</th>
+                                </tr>
+                                <tr ng-repeat="bd in ba.birthdays track by $index">
+                                    <td>{{bd.id}}</td>
+                                    <td>{{bd.name}}</td>
+                                    <td>{{bd.db}}</td>
+                                </tr>
+                            </table>
+                        </div>
                     </div>
                 </div>
             </div>
